# sqlformater

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/.workflows/: handle_cargo_conflicts.py  sync-pr.yml
.github/workflows/: CICD.yml  publish-cargo.yml  test.yml
doc/: help-settings.txt  help-usage.txt
sqlformater/: .gitignore
src/: cli.rs  config.rs  doc.rs  formater.rs  lib.rs  main.rs  settings.rs
tests/: tests.rs
