[package]
name = "sqlformater"
version = "0.1.0"
edition = "2024"

[dependencies]
mylog = "=0.1.3"
rayon = "1.10.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.142"
sqlparser = "0.58.0"
pyo3 = { version = "0.20", features = ["extension-module"] }

[lib]
name = "sqlformater"
crate-type = ["cdylib"]