[project]
name = "sqlformater"
version = "0.1.0"
description = "Formater SQL written in Rust"
authors = [{name = "LugolBis"}]
license = { file = "LICENSE" }
readme = "README.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "sqlformater"
include = ["LICENSE", "README.md"]

[project.scripts]
sqlformater = "sqlformater:run_cli"