[project]
name = "sqlformater"
version = "1.0.1"
description = "Formater SQL written in Rust"
authors = [{name = "LugolBis"}]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "sqlformater"
include = ["LICENSE", "README.md"]

[project.scripts]
sqlformater = "sqlformater:run_cli"